[refactor] Files.readString()으로 파일 읽기 간결화